# OG-s-Graphics

./: README.md
COMP_371_PROJECT/: CMakeLists.txt
COMP_371_PROJECT/miniStadium/: miniStadium.mtl
COMP_371_PROJECT/shaders/: phong.frag.glsl  phong.vert.glsl
COMP_371_PROJECT/src/: 1.fragmentShader.fs  cloudbox.fs  main.cpp
COMP_371_PROJECT/src/assimp/5.3.1/: INSTALL_RECEIPT.json
COMP_371_PROJECT/src/learnopengl/: camera.h  model.h  shader_m.h
COMP_371_PROJECT/web/: index.html
